; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_mr.c_to_mlx4_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_mr.c_to_mlx4_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MLX4_MW_TYPE_1 = common dso_local global i32 0, align 4
@MLX4_MW_TYPE_2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @to_mlx4_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @to_mlx4_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 129, label %5
    i32 128, label %7
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @MLX4_MW_TYPE_1, align 4
  store i32 %6, i32* %2, align 4
  br label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @MLX4_MW_TYPE_2, align 4
  store i32 %8, i32* %2, align 4
  br label %10

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %7, %5
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
